# resistor-performance-test-simulator

./: .env  README.md
client/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/config/: env_handler.cpp  env_handler.h
client/route/: route_provider.cpp  route_provider.h  routes.cpp  routes.h
client/serial_port/: receiver.cpp  receiver.h  serial_port.cpp  serial_port.h
server/: .env  CMakeLists.txt  README.md
server/.cache/clangd/index/: dotenv.h.7B64AFF2BBED70D7.idx  env_handler.cpp.1C30440E0C601D86.idx  env_handler.h.34CF9F4054EC415C.idx  main.cpp.AD036E822A03CF1C.idx  redis_config.cpp.25334C219D5B4B03.idx  redis_config.h.95892A1EC0AF75E7.idx  redis_wrapper.cpp.238ECC7F3D55A413.idx  redis_wrapper.h.78824F27C5A7CA3F.idx  temperature_setter.cpp.EA23ABCFCDE5A9A8.idx  temperature_setter.h.61A5362FDEA0D66D.idx
server/src/: main.cpp
server/src/config/: env_handler.cpp  env_handler.h  redis_config.cpp  redis_config.h
server/src/db/: redis_wrapper.cpp  redis_wrapper.h
server/src/device/: resistor.cpp  resistor.h
server/src/route/: route_provider.cpp  route_provider.h  routes.cpp  routes.h
server/src/serial_port/: receiver.cpp  receiver.h  sender.cpp  sender.h  serial_port.cpp  serial_port.h
